Sat Jul  9 17:39:28 CEST 2005  Marcus Meissner  <marcus@jet.franken.de>

	* *: Initial import of HP Photosmart 215 driver.
	     Can download images and previews, can delete single images
	     and all images.

	* hp215.c:
	     Switch to generic CRC handling, generized the command blob generation.
	     Added all command codes from the windows driver.