@@ -24,7 +24,10 @@
 
 #define STX 0x02
 #define ETX 0x03
+#define EOT 0x04
 #define ACK 0x06
+
+#define HP215_OK	0xe0e0
 
 typedef struct 
 {
